--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "mongodb": "^6.17.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
